# vmark

./: .gitignore  AGENT.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: deploy-website.yml  release.yml  sync-marketplace.yml  update-homebrew.yml
dev-docs/: tab-escape-edge-cases.md
docs/codex-plans/: claude-agent-sdk-integration.md
plugins/vmark-mcp/: README.md
scripts/: check-emdash-spacing.mjs  css-quick-check.sh
shared/: menu-ids.json
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  version.txt
src-tauri/binaries/: .gitignore
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent_commands.rs  agent_sidecar.rs  api_key.rs  claude_detection.rs  lib.rs  macos_menu.rs  main.rs  mcp_bridge.rs  mcp_config.rs  mcp_server.rs  menu.rs  menu_events.rs  quit.rs  watcher.rs  window_manager.rs  workspace.rs
src/contexts/: WindowContext.tsx
src/export/: useExportOperations.ts
src/hooks/: closeSave.test.ts  closeSave.ts  useAIAgent.test.ts  useAIAgent.ts  useAppQuit.ts  useAutoSave.test.ts  useAutoSave.ts  useCJKFormatCommands.ts  useDefaultSaveFolder.ts  useDocumentState.ts  useDragDropOpen.ts  useExportMenuEvents.ts  useExportOperations.ts  useExternalFileChanges.ts  useFileOperations.test.ts  useFileOperations.ts  useFinderFileOpen.test.tsx  useFinderFileOpen.ts  useFormatCommands.ts  useImageContextMenu.ts  useImageDragDrop.ts  useImageDrop.ts  useImageOperations.ts  useMcpAutoStart.ts  useMcpHealthCheck.ts  useMcpServer.ts  useMcpStatusMenuEvent.ts  useMenuEvents.ts  useOutlineSync.ts  useParagraphCommands.ts  useRecentFilesMenuEvents.ts  useSearchCommands.ts  useSelectionCommands.ts  useSettingsSync.test.ts  useSettingsSync.ts  useSourceEditorSearch.ts  useSourceEditorSync.ts  useSourceMenuCommands.ts  useTabOperations.test.ts  useTabOperations.ts  (+22 more)
src/pages/: PrintPreview.tsx  Settings.tsx
src/plugins/: editorPlugins.tiptap.ts  editorPlugins.ts  security.test.ts
src/stores/: activeEditorStore.ts  aiSidebarStore.test.ts  aiSidebarStore.ts  aiSuggestionStore.test.ts  aiSuggestionStore.ts  documentStore.ts  editorStore.test.ts  editorStore.ts  featureFlagsStore.ts  footnotePopupStore.test.ts  formatToolbarStore.ts  headingPickerStore.ts  imageContextMenuStore.ts  imagePasteToastStore.ts  imagePopupStore.test.ts  imagePopupStore.ts  linkPopupStore.test.ts  linkPopupStore.ts  linkReferenceDialogStore.ts  mcpHealthStore.ts  milkdownCursorContextStore.ts  revisionStore.ts  settingsStore.test.ts  settingsStore.ts  shortcutsStore.test.ts  shortcutsStore.ts  sourceCursorContextStore.ts  sourceFormatStore.ts  sourcePeekStore.ts  spellCheckStore.ts  tabStore.test.ts  tabStore.ts  tableToolbarStore.test.ts  terminalStore.test.ts  terminalStore.ts  uiStore.ts  updateStore.test.ts  updateStore.ts  viewSettingsStore.test.ts  viewSettingsStore.ts  (+2 more)
src/styles/: index.css  (+2 more)
vmark-agent-sdk/: package.json  tsconfig.json
vmark-mcp-server/: README.md  package.json
website/: changelog.md  download.md  index.md  package.json  pnpm-lock.yaml
(+596 files in other folders)
