[package]
name = "vmark"
version = "0.1.0"
description = "Local-first markdown editor with rich text and source modes"
authors = ["Xiaolai"]
edition = "2021"

[lib]
name = "vmark_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-mcp-bridge = "0.4"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
urlencoding = "2"
notify = { version = "7", default-features = false, features = ["macos_fsevent"] }

[dev-dependencies]
tempfile = "3"
