[package]
name = "vmark"
version = "0.2.4"
description = "Local-first markdown editor with rich text and source modes"
authors = ["Xiaolai"]
edition = "2021"

[lib]
name = "vmark_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-mcp-bridge = "0.8"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
urlencoding = "2"
notify = { version = "7", default-features = false, features = ["macos_fsevent"] }
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
portable-pty = "0.8"
toml = "0.8"
dirs = "5"
chrono = "0.4"

[dev-dependencies]
tempfile = "3"
